[gd_scene load_steps=3 format=3 uid="uid://73afp7wgs56o"]

[ext_resource type="Script" uid="uid://clr5jo0tvwkqc" path="res://scripts/game_reflex.gd" id="1_67g68"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i204b"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.9019608)
shadow_size = 5

[node name="Reflex" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67g68")

[node name="SpawnArea" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -355.0
offset_right = 190.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i204b")

[node name="ColorRect" type="ColorRect" parent="SpawnArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -155.0
offset_right = 185.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="TimerGame" type="Timer" parent="."]

[node name="TimerDisplay" type="Timer" parent="."]

[node name="TimerInterval" type="Timer" parent="."]

[node name="TimerSpawn" type="Timer" parent="."]

[connection signal="timeout" from="TimerSpawn" to="." method="_on_spawn_timer_timeout"]
